plugins {
	id 'fabric-loom' version '0.12-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	mavenCentral()
	maven { url 'https://jitpack.io' }
	maven { url 'https://maven.blamejared.com' }
	maven { url "https://maven.shedaniel.me" }
	maven {
		name = 'Curse Maven'
		url = 'https://cursemaven.com'
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// ChemLib
	modImplementation "com.github.SmashingMods:ChemLib-Fabric:1.19.2-1.0.0"

	// Patchouli
	modImplementation "vazkii.patchouli:Patchouli:1.19-74-FABRIC"

	// Roughly Enough Items (REI)
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:9.1.520"
	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.1.520"

	// Tech Reborn Energy API
	include modApi('teamreborn:energy:2.2.0') {
		exclude(group: "net.fabricmc.fabric-api")
	}

	// Forge Config API
	include implementation('com.electronwill.night-config:core:3.6.5')
	include implementation('com.electronwill.night-config:toml:3.6.5')
	include modImplementation("curse.maven:forgeconfigapiport-547434:3904745") {
		exclude(group: "net.fabricmc.fabric-api")
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
